Freedom Sanbox Ant Deploy/src/objects/GoalInvestmentAssetAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Order__c</fullName>
        <label>Allocation Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoalYearValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GoalYearValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>Mapping with Goal object</description>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>InvestmentAssets</relationshipLabel>
        <relationshipName>GoalMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Investment_Asset__c</fullName>
        <description>Investment asset relation</description>
        <label>Investment Asset</label>
        <referenceTo>Investment_Asset__c</referenceTo>
        <relationshipLabel>GoalInvestmentAssetAssociations</relationshipLabel>
        <relationshipName>InvestmentAssetMapping</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>GoalInvestmentAssetAssociation</label>
    <nameField>
        <displayFormat>GIAA-{0000}</displayFormat>
        <label>GoalInvestmentAssetAssociationId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoalInvestmentAssetAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>